# SimpleFastOpenAtomicVisualiser

./: .gitattributes  .gitignore  CMakeLists.txt  DOCUMENTATION.md  DOCUMENTATION_8md.html  LICENSE.md  LICENSES.md  README.md  annotated.html  atomRenderer_8h.html  atomRenderer_8h__dep__incl.map  atomRenderer_8h__dep__incl.md5  atomRenderer_8h__incl.map  atomRenderer_8h__incl.md5  atomRenderer_8h_source.html  atom_8h.html  atom_8h__dep__incl.map  atom_8h__dep__incl.md5  atom_8h__incl.map  atom_8h__incl.md5  atom_8h_source.html  axes_8h.html  axes_8h__dep__incl.map  axes_8h__dep__incl.md5  axes_8h__incl.map  axes_8h__incl.md5  axes_8h_source.html  bondRenderer_8h.html  bondRenderer_8h__dep__incl.map  bondRenderer_8h__dep__incl.md5  bondRenderer_8h__incl.map  bondRenderer_8h__incl.md5  bondRenderer_8h_source.html  bond_8h.html  bond_8h__dep__incl.map  bond_8h__dep__incl.md5  bond_8h__incl.map  bond_8h__incl.md5  bond_8h_source.html  build.sh  (+188 more)
.github/workflows/: docs.yml  release.yml
docs/: doxygen.config
include/: HTM.h  atom.h  atomRenderer.h  axes.h  bond.h  bondRenderer.h  camera.h  cell.h  colour.h  commandLine.h  config.h  element.h  glUtils.h  hierarchicalTriangularMesh.h  icon.h  main.h  meshes.h  structure.h  structureUtils.h  triangle.h  trixel.h  util.h  xyz.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_6.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  enumvalues_12.js  enumvalues_13.js  enumvalues_14.js  enumvalues_15.js  enumvalues_16.js  (+66 more)
src/: main.cpp
tests/: CMakeLists.txt  HISTORY  REVCON  unit_tests.cpp
tests/cmake/: CodeCoverage.cmake
tests/models/: CMakeLists.txt  models.cpp  models.h
tests/test_elements/: CPK  test_elements.cpp
tests/test_structure_input/: CMakeLists.txt  CONFIG  ethanol.REVCON  psilocybin.xyz  test_structure_input.cpp
tests/xyz/: CMakeLists.txt  psilocybin.xyz  xyz.cpp  xyzTest.h
